--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "build-css": "node-less-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
